[package]
name = "ordc_search"
version = "0.1.0"
authors = ["saresend <saresend@usc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.12.0"
failure = "0.1.8"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
